@@ -1,4 +1,7 @@
 
+2007-07-22  Roland Clobus <rclobus@bigfoot.com>
+	* pioneers.spec.in: Updated. It works for openSUSE 10.2.
+	
 2007-07-21  Roland Clobus <rclobus@bigfoot.com>
 	* server/server.h: Added robber undo in 0.11 change list.
 
